# tbb-bridge-dpi

./: DL_ClassifierModel.py  INSTRUCTIONS.md  Others.py  README.md  baseline.py  cele_hum_baseline.py  combination_performance.py  crossdata_experiment.py  crossdata_experiment_chembl.py  dropout_performance.py  env.yml  hypernodes_performance.py  main.py  metrics.py  misclassification_pairs.py  new_main.py  new_utils.py  nnLayer.py  predict_mtb.py  pyproject.toml  sarscov_experiment.py  seen_bool_stats.py  test_sars.py  three_runs.py  train.py  train_cv.py  utils.py
analysis_misclassified_examples/analysis/: output_clustal_miscl_proteins.clustal_num  statistical_analysis.ipynb
analysis_misclassified_examples/stats_generator/: misclassification_pairs.py
data/chembl/: chembl2aaseq.pkl  create_chembl.py  prot_embedding_chembl.pkl
data/chembl/DEEPScreen_files/: split_actinact.sh
data/embedding_files/: prot_embedding_bindingdb.pkl  prot_embedding_mtb.pkl  prot_embedding_sarscov.pkl
data/mtb/1a/: data.txt
data/mtb/2a/: data.txt
data/mtb/3a/: data.txt
data/mtb/4a/: data.txt
data/mtb/5a/: data.txt
data/mtb/6a/: data.txt
data/mtb/reference/: data.txt
data/sarscov2/: data.txt
smiles_transformer/: build_vocab.py  dataset.py  enumerator.py  pretrain_trfm.py  st_utils.py
statistical_analysis/analysis/: misclass_pEmbeddings.pkl
statistical_analysis/stats_generator/: test.pkl
statsitical_analysis/: clustal_group.txt  file_description.txt  misclass_DTI_bridge.pkl  misclass_p_Embedding.pkl  statistical_analysis.ipynb
statsitical_analysis/.ipynb_checkpoints/: statistical_analysis-checkpoint.ipynb
statsitical_analysis/stats_generator/: misclassification_pairs.py
