[tool.poetry]
name = "tbb-bridge-dpi"
version = "0.1.0"
description = "Repo for our altered code for Bridge DPI for the ADL course @ Leiden University (2020-2021)"
authors = ["Alessandro Palma <>",
           "Heleen Severin <>",
           "Julius Cathalina <julius.cathalina@gmail.com>",
           "Laurens Engwegen <>",
           "Stijn Oudshoorn <>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
scipy = "^1.6.1"
tqdm = "^4.58.0"
tables = "^3.6.1"
tensorflow = "^2.3"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
get-gxx = "conda install -c anaconda gxx_linux-64"
get-torch-cuda = "conda install pytorch torchvision torchaudio cudatoolkit=11.1 -c pytorch -c conda-forge"
get-torch-cuda-10 = "conda install pytorch torchvision torchaudio cudatoolkit=10.0 -c pytorch"
get-tensorflow-cuda-10 = "conda install tensorflow-gpu=2.0 python=3.7"
